--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
     implementation project(":agilysyspay")
-   // implementation 'com.github.Ragavana:agilysyspay:version1.0'
+//    implementation 'com.github.Ragavana:agilysyspay:v1.1'
 }
