--- a/agilysyspay/build.gradle
+++ b/agilysyspay/build.gradle
@@ -24,6 +24,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+          //  useProguard false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
