--- a/agilysyspay/build.gradle
+++ b/agilysyspay/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 android {
     namespace 'com.agilysys.payments'
-    compileSdk 32
+    compileSdk 33
 
     lintOptions {
         abortOnError false
@@ -15,7 +15,7 @@ android {
 
     defaultConfig {
         minSdk 21
-        targetSdk 32
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -68,7 +68,24 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 
+
+    // implementation "com.github.fevziomurtekin:PayView:1.0.3"
+
     //implementation 'co.paystack.android:paystack:3.1.2'
+
+   // implementation 'com.google.android.gms:play-services-safetynet:11.8.0'
+
+    implementation 'com.google.android.recaptcha:recaptcha:18.0.1'
+
+  //  implementation 'com.google.cloud:google-cloud-recaptchaenterprise:3.2.0'
+
+   // implementation project(":payview")
+
+  //  implementation 'com.github.fevziomurtekin:PayView:1.0.3'
+
+    implementation("com.airbnb.android:lottie:2.5.1")
+
+    implementation 'com.github.razir.progressbutton:progressbutton:2.1.0'
 
 
 }
