--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
-//    implementation project(":agilysyspay")
-    implementation 'com.github.Ragavana:agilysyspay:1.2'
+    implementation project(":agilysyspay")
+    //implementation 'com.github.Ragavana:agilysyspay:1.2'
+
+
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+
 }
